# esg-research-toolkit

./: .dockerignore  .env.example  .esg-deploy-config.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE.md  PROJECT_PROGRESS.md  README.de.md  README.md  README.zh.md  SECURITY.md  SECURITY_SUMMARY.md  SUMMARY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  main.py  requirements-ci.txt  requirements.txt
.github/: pull_request_template.md
.guard/: ENGINEERING_MEMORY.md  ZONE_POLICY.md  local-only-files.txt  local-prefixes.txt  public-prefixes.txt
.omx/: metrics.json
alembic/: env.py
benchmark/: __init__.py  api.py  compute.py  models.py  percentiles.py
core/: ai_client.py  config.py  database.py  evidence.py  limiter.py  models.py  schemas.py  validation.py  version.py
docs/: CAREER_PRODUCT_ROADMAP.md  DEPLOY_GUARDRAILS.md  DEVELOPMENT_PLAN.md  USER_GUIDE.de.md  USER_GUIDE.md  USER_GUIDE.zh.md  api-providers-config.md  parallel-dev-sop.md  repo-sync-policy.md  test-pdf-sources.md
esg_frameworks/: api.py  comparison.py  csrc_2023.py  csrd.py  eu_taxonomy.py  gri_standards.py  sasb_standards.py  schemas.py  sec_climate.py  storage.py
examples/: mock_esg_data.json
frontend/: .gitignore  AUDIT_INDEX.md  AUDIT_RECOMMENDATIONS.md  CODEX_FRONTEND_REVIEW_PROMPT.md  CONSISTENCY_SUMMARY.md  DESIGN_CONSISTENCY_AUDIT.md  EXACT_FIXES.md  README.md  README_AUDIT.md  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.ts  (+2 more)
schemathesis_compat/: pyproject.toml  schemathesis_compat.py
(+328 files in other folders)
